[project]
name = "youtube-comment-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Abhinav Vishen",email = "av.abhinavvishen@gmail.com"}
]
requires-python = ">=3.10,<3.15"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "sqlmodel (>=0.0.37,<0.0.38)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "google-api-python-client (>=2.193.0,<3.0.0)",
    "google-auth (>=2.49.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "youtube-transcript-api (>=1.2.4,<2.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "langchain (>=1.0.3,<2.0.0)",
    "langchain-cohere (>=0.5.0,<0.6.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "redis (>=7.0.0,<8.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "pinecone (>=7.3.0,<8.0.0)",
    "svix (>=1.90.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false